# lean-fmt

./: README.md  go.mod  justfile  lean-fmt.cabal  main.go  main_test.go
.github/workflows/: release-linux.yml  release.yml
app/: Main.hs
scripts/: release.sh
src/: LeanFmt.hs
test/: Main.hs
